k8s/app/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: music-rec
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: diashabarmina/music-recommendation-mlflow:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: mlflow-data
              mountPath: /mlflow/artifacts
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "3Gi"
              cpu: "500m"
      volumes:
        - name: mlflow-data
          persistentVolumeClaim:
            claimName: mlflow-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: music-rec
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
